<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:text="@string/move_header_level"
        android:textSize="20sp"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/move_header_name"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_level"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_power"
        android:paddingStart="8dp"/>
    <TextView
        android:id="@+id/tv_power"
        android:layout_width="65sp"
        android:layout_height="wrap_content"
        android:text="@string/move_header_power"
        android:textSize="20sp"
        android:gravity="end"
        app:layout_constraintEnd_toStartOf="@+id/tv_acc"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="8dp"/>
    <TextView
        android:id="@+id/tv_acc"
        android:layout_width="45sp"
        android:layout_height="wrap_content"
        android:text="@string/move_header_acc"
        android:textSize="20sp"
        android:gravity="end"
        app:layout_constraintEnd_toStartOf="@+id/tv_pp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="8dp"/>
    <TextView
        android:id="@+id/tv_pp"
        android:layout_width="35sp"
        android:layout_height="wrap_content"
        android:text="@string/move_header_pp"
        android:textSize="20sp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="8dp"
        android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>